# Diseno-con-margen-de-shadowing-y-cobertura

./: .env.example  .gitignore  README.md  diseno_shadowing_cobertura.ipynb  diseno_shadowing_cobertura.py  pyproject.toml
examples/: run_crew.py  run_graph.py
src/diseno_multiagente/: __init__.py
src/diseno_multiagente/core/: __init__.py  models.py
src/diseno_multiagente/crews/: __init__.py  basic_crew.py
src/diseno_multiagente/graphs/: __init__.py  basic_graph.py
src/diseno_multiagente/observability/: __init__.py  langsmith.py
